unpackaged/main/default/objects/CMPL123TMS__Question__c/CMPL123TMS__Question__c.object-meta.xml
<CustomObject>
    <description>All the Questions are stored in this Object.</description>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>