unpackaged/main/default/objects/CMPL123TMS__Question__c/fields/CMPL123TMS__Answer1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Answer1__c</fullName>
        <description>Answer1</description>
        <inlineHelpText>Answer1</inlineHelpText>
        <label>Answer1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>