unpackaged/main/default/objects/CMPL123TMS__Question__c/fields/CMPL123TMS__Answer2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Answer2__c</fullName>
        <description>Answer2</description>
        <inlineHelpText>Answer2</inlineHelpText>
        <label>Answer2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>