unpackaged/main/default/objects/CMPL123TMS__Question__c/fields/CMPL123TMS__Answer3__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Answer3__c</fullName>
        <description>Answer3</description>
        <inlineHelpText>Answer3</inlineHelpText>
        <label>Answer3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>