unpackaged/main/default/objects/CMPL123TMS__Question__c/fields/CMPL123TMS__Feedback_Correct__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Feedback_Correct__c</fullName>
        <description>Feedback Correct</description>
        <inlineHelpText>Feedback Correct</inlineHelpText>
        <label>Feedback Correct</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>