unpackaged/main/default/objects/CMPL123TMS__Question__c/fields/CMPL123TMS__Feedback_Incorrect__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Feedback_Incorrect__c</fullName>
        <description>Feedback Incorrect</description>
        <inlineHelpText>Feedback Incorrect</inlineHelpText>
        <label>Feedback Incorrect</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>