unpackaged/main/default/objects/CMPL123TMS__Question__c/fields/CMPL123TMS__Identify_Correct_Answer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Identify_Correct_Answer__c</fullName>
        <description>Identify Correct Answer</description>
        <inlineHelpText>Identify Correct Answer</inlineHelpText>
        <label>Identify Correct Answer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Answer1</fullName>
                </value>
                <value>
                    <fullName>Answer2</fullName>
                </value>
                <value>
                    <fullName>Answer3</fullName>
                </value>
                <value>
                    <fullName>Answer4</fullName>
                </value>
                <value>
                    <fullName>Answer5</fullName>
                </value>
                <value>
                    <fullName>Answer6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>