unpackaged/main/default/objects/CMPL123TMS__Question__c/fields/CMPL123TMS__Question__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Question__c</fullName>
        <description>Enter your Question.</description>
        <inlineHelpText>Enter your Question.</inlineHelpText>
        <label>Question</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>