unpackaged/main/default/objects/CMPL123TMS__Question__c/fields/CMPL123TMS__Question_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Question_Type__c</fullName>
        <description>Question Type</description>
        <inlineHelpText>Question Type</inlineHelpText>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single-Select</fullName>
                </value>
                <value>
                    <fullName>Multi-Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>