unpackaged/main/default/objects/CMPL123TMS__Question__c/fields/CMPL123TMS__SelectionMatchingJSON__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__SelectionMatchingJSON__c</fullName>
        <description>SelectionMatchingJSON</description>
        <inlineHelpText>SelectionMatchingJSON</inlineHelpText>
        <label>SelectionMatchingJSON</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>